--- a/my_sub.json5
+++ b/my_sub.json5
@@ -1,64 +1,78 @@
-
 {
-  "key": 5,
-  "name": "功能类-自动领取微信红包🧧（不抢最佳包）",
-  "desc": "自动领取私聊红包,群聊红包，不抢最佳手气红包",
-  "fastQuery": true,
-  "rules": [
+  "id": "my-gkd-rules",
+  "name": "我的GKD抢红包规则",
+  "author": "mengwenshuai666",
+  "version": 1,
+  "apps": [
     {
-      "key": 1,
-      "name": "点击别人发的红包（排除最佳手气）",
-      "matches": [
-        "LinearLayout[childCount=1] >2 @FrameLayout[clickable=true] >2 LinearLayout[getChild(1).childCount=1] +2 RelativeLayout > [text=\"微信红包\"] !* [text*=\"最佳\"]"
-      ],
-      "snapshotUrls": [
-        "https://i.gkd.li/i/18134826",
-        "https://i.gkd.li/i/24347101"
-      ],
-      "excludeSnapshotUrls": [
-        "https://i.gkd.li/i/18134823",
-        "https://i.gkd.li/i/18134833"
-      ],
-      "activityIds": [
-        ".ui.LauncherUI",
-        ".ui.chatting.variants.ChattingMainUI"
-      ]
-    },
-    {
-      "key": 2,
-      "name": "点击红包-开",
-      "preKeys": [1],
-      "matches": [
-        "@Button[desc=\"开\"] -3 LinearLayout >2 [text$=\"红包\"]"
-      ],
-      "matchRoot": true,
-      "snapshotUrls": [
-        "https://i.gkd.li/i/18134828",
-        "https://i.gkd.li/i/21177180"
-      ],
-      "excludeSnapshotUrls": [
-        "https://i.gkd.li/i/12567698"
-      ],
-      "activityIds": [
-        ".plugin.luckymoney.ui.LuckyMoney"
-      ]
-    },
-    {
-      "key": 3,
-      "name": "从红包结算界面返回",
-      "preKeys": [1,2],
-      "matches": [
-        "@ImageView[desc=\"返回\"] +n LinearLayout >8 [text$=\"红包\"]"
-      ],
-      "snapshotUrls": [
-        "https://i.gkd.li/i/18134829",
-        "https://i.gkd.li/i/18135031",
-        "https://i.gkd.li/i/23825631",
-        "https://i.gkd.li/i/24414957"
-      ],
-      "activityIds": [
-        ".plugin.luckymoney.ui.LuckyMoney"
+      "id": "com.tencent.mm",
+      "name": "微信",
+      "rules": [
+        {
+          "key": 5,
+          "name": "功能类-自动领取微信红包🧧（不抢最佳包）",
+          "desc": "自动领取私聊红包,群聊红包，不抢最佳手气红包",
+          "fastQuery": true,
+          "rules": [
+            {
+              "key": 1,
+              "name": "点击别人发的红包（排除最佳手气）",
+              "matches": [
+                "LinearLayout[childCount=1] >2 @FrameLayout[clickable=true] >2 LinearLayout[getChild(1).childCount=1] +2 RelativeLayout > [text=\"微信红包\"] !* [text*=\"最佳\"]"
+              ],
+              "snapshotUrls": [
+                "https://i.gkd.li/i/18134826",
+                "https://i.gkd.li/i/24347101"
+              ],
+              "excludeSnapshotUrls": [
+                "https://i.gkd.li/i/18134823",
+                "https://i.gkd.li/i/18134833"
+              ],
+              "activityIds": [
+                ".ui.LauncherUI",
+                ".ui.chatting.variants.ChattingMainUI"
+              ]
+            },
+            {
+              "key": 2,
+              "name": "点击红包-开",
+              "preKeys": [1],
+              "matches": [
+                "@Button[desc=\"开\"] -3 LinearLayout >2 [text$=\"红包\"]"
+              ],
+              "matchRoot": true,
+              "snapshotUrls": [
+                "https://i.gkd.li/i/18134828",
+                "https://i.gkd.li/i/21177180"
+              ],
+              "excludeSnapshotUrls": [
+                "https://i.gkd.li/i/12567698"
+              ],
+              "activityIds": [
+                ".plugin.luckymoney.ui.LuckyMoney"
+              ]
+            },
+            {
+              "key": 3,
+              "name": "从红包结算界面返回",
+              "preKeys": [1, 2],
+              "matches": [
+                "@ImageView[desc=\"返回\"] +n LinearLayout >8 [text$=\"红包\"]"
+              ],
+              "snapshotUrls": [
+                "https://i.gkd.li/i/18134829",
+                "https://i.gkd.li/i/18135031",
+                "https://i.gkd.li/i/23825631",
+                "https://i.gkd.li/i/24414957"
+              ],
+              "activityIds": [
+                ".plugin.luckymoney.ui.LuckyMoney"
+              ]
+            }
+          ]
+        }
       ]
     }
   ]
 }
+
